force-app/main/default/objects/Partner_Enrollment_Request__c/Partner_Enrollment_Request__c.object-meta.xml
<CustomObject>
    <label>SPartner Enrollment Request</label>
    <nameField>
        <displayFormat>E-{YY}{MM}{DD}{000}</displayFormat>
        <label>Partner Enrollment Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPartner Enrollment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>