force-app/main/default/objects/Partner_Enrollment_Request__c/fields/Company_Fax__c.field-meta.xml
<CustomField>
    <fullName>Company_Fax__c</fullName>
    <label>Company Fax</label>
    <type>Phone</type>
</CustomField>