force-app/main/default/objects/Partner_Enrollment_Request__c/fields/Final_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Review_Date__c</fullName>
    <label>Final Review Date</label>
    <type>Date</type>
</CustomField>