force-app/main/default/objects/Partner_Enrollment_Request__c/fields/Final_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Review_Status__c</fullName>
    <label>Final Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negotiated</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>