force-app/main/default/objects/Partner_Enrollment_Request__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value Added Reseller</fullName>
                <label>Reseller</label>
            </value>
            <value>
                <fullName>Managed Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>