force-app/main/default/objects/Partner_Enrollment_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Request Additional Info</fullName>
            </value>
            <value>
                <fullName>Done Review</fullName>
                <label>Done First Review</label>
            </value>
            <value>
                <fullName>Assignment of Negotiator</fullName>
                <label>Done Final Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>