force-app/main/default/objects/Partner_Enrollment_Request__c/validationRules/Final_Review_Status_Update_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Review_Status_Update_Check</fullName>
    <active>false</active>
    <description>this rule triggers when final review fields (staus/date) are edited</description>
    <errorConditionFormula>OR(ISCHANGED( Final_Review_Status__c ), ISCHANGED( Final_Review_Date__c ))</errorConditionFormula>
    <errorMessage>Status Should be in &apos;Done Review&apos; or &apos;Assignment of Negotiator&apos; stage.</errorMessage>
</ValidationRule>