force-app/main/default/objects/Partner_Enrollment_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>Work_Email__c</columns>
    <columns>Subject__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Reviewer__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Final_Review_Status__c</columns>
    <columns>Final_Review_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>